updated config path for Macos and adjusted colors

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #6a3de8;
+  --ifm-color-primary-dark: #5a2ae4;
+  --ifm-color-primary-darker: #511fe0;
+  --ifm-color-primary-darkest: #4319b9;
+  --ifm-color-primary-light: #7a50ec;
+  --ifm-color-primary-lighter: #845bee;
+  --ifm-color-primary-lightest: #a07cf2;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #8c65f0;
+  --ifm-color-primary-dark: #7646ed;
+  --ifm-color-primary-darker: #6a37eb;
+  --ifm-color-primary-darkest: #4a16cc;
+  --ifm-color-primary-light: #a284f3;
+  --ifm-color-primary-lighter: #ae93f5;
+  --ifm-color-primary-lightest: #d0c1fa;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
